# consprob-trained

./: .gitignore  Cargo.toml  README.md  run_constrain.sh  run_rtrain.sh
assets/: bprna_data.tar.bz2  contrafold_optimize.params.final  data-set1.tar.bz2  infernal_black_list.tar.bz2  test_data.tar.bz2  test_ref_sas.tar.bz2  test_ref_sss.tar.bz2  train_data.tar.bz2  train_data_4_ss_train.tar.bz2  train_data_multi.tar.bz2  train_data_sa.tar.bz2  train_data_ss.tar.bz2
benches/: benches.rs
scripts/: compile_rna_fams.py  compile_rna_fams_2.py  compile_rna_fams_bralibase.py  compile_rna_fams_rnastralign.py  constrain_using_your_data.sh  draw_all.sh  draw_epochs_vs_costs.py  draw_train_logs.py  generate_ss_training_dataset.py  get_running_time_3d_plots.py  get_stats_of_css_estimation_programs.py  get_stats_of_ss_estimation_programs.py  get_stats_of_ss_estimation_programs_2.py  get_stats_of_ss_estimation_programs_3.py  get_stats_of_ss_estimation_programs_4.py  get_stats_of_ss_estimation_programs_bralibase.py  get_stats_of_ss_estimation_programs_bralibase_2.py  get_stats_of_ss_estimation_programs_bralibase_3.py  get_stats_of_ss_estimation_programs_rnastralign.py  get_stats_of_ss_estimation_programs_rnastralign_2.py  get_stats_of_ss_estimation_programs_rnastralign_3.py  infernal_check.py  infernal_check_bralibase.py  infernal_check_rnastralign.py  run_all.py  run_all.sh  run_constrain.sh  run_locarnap.py  run_raf_train.sh  run_ss_estimation_programs.py  run_ss_estimation_programs_2.py  run_ss_estimation_programs_3.py  run_ss_estimation_programs_bralibase.py  train_contrafold.py  (+2 more)
(+30 files in other folders)
