[package]
name = "consprob-trained"
version = "0.1.10"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Trainable Probability Inference Engine on RNA Structural Alignment"
repository = "https://github.com/heartsh/consprob-trained"
readme = "README.md"
keywords = ["bioinformatics", "rna", "structural-alignment"]
license = "MIT"

[dependencies]
consprob = "0.1"
scoped_threadpool = "0.1"
getopts = "0.2"
bio = "1.1"
num_cpus = "1.0"
itertools = "0.10"
hashbrown = "0.13"
my-bfgs = "0.1"
ndarray-rand = "0.14"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"
name = "consprob_trained"

[[bench]]
name = "benches"
harness = false
